--- a/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
@@ -11,13 +11,15 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_height="wrap_content"
         android:text="병현이의 절망"
+        android:paddingVertical="10dp"
         android:textStyle="bold"
         android:textSize="20dp"
         android:focusable="false"
         android:clickable="false"
         android:textColor="@color/black"
         android:background="@android:color/transparent"
-        android:layout_margin="20dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintEnd_toStartOf="@id/theme_kebab_menu_iv"
         app:layout_constraintBottom_toTopOf="@+id/my_gallery_theme_gridLayout"
         app:layout_constraintStart_toStartOf="parent"
