feat: 미술관 음악 실행 기능 추가

--- a/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
@@ -24,7 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:text="테마 : 절망 절망 절망 절망"
+                android:paddingEnd="4dp"
+                android:text="테마 : 이것좀보세요"
                 android:elevation="10dp"
                 app:textStrokeWidth="10"
                 app:textStrokeColor="@color/black"
