--- a/Android/ArtI/app/src/main/res/layout/fragment_genre_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_genre_detail.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:paddingEnd="12dp"
+            android:paddingStart="12dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
