--- a/Android/ArtI/app/src/main/res/layout/item_art_museum.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_art_museum.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingVertical="6dp"
-        android:paddingStart="12dp">
+        android:paddingEnd="12dp"
+        >
 
         <ImageView
             android:id="@+id/iv_art_museum"
