--- a/Android/ArtI/app/src/main/res/layout/item_artist.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_artist.xml
@@ -7,17 +7,18 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         >
 
         <ImageView
             android:id="@+id/iv_artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_margin="4dp"
             android:src="@drawable/temp_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,10 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
             android:fontFamily="@font/inter_28pt_black"
             android:text="잠만보"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@id/iv_artist"
             app:layout_constraintTop_toTopOf="@id/iv_artist" />
 
