--- a/Android/ArtI/app/src/main/res/values/colors.xml
+++ b/Android/ArtI/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="grey">#80C5C5C5</color>
     <color name="disable_color">#350B0712</color>
 
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
