--- a/Android/ArtI/app/src/main/res/layout/fragment_is_select_create_image.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_is_select_create_image.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.artwork.ArtworkUploadFragment">
+        tools:context=".ui.artwork.IsSelectCreateImageFragment">
 
         <ImageView
             android:id="@+id/artwork_back_btn"
@@ -47,7 +47,7 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:progress="0"
+            android:progress="60"
             android:layout_marginHorizontal="20dp"
             android:progressTint="@color/point_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,27 +58,41 @@
             android:id="@+id/artwork_comment_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="전시하고 싶은 미술품을 고를거에요"
+            android:text="사진을 등록하면 원하는\n 미술품으로 바꿔줄거에요"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progressBar"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintVertical_bias="0.26" />
 
         <androidx.appcompat.widget.AppCompatButton
             style="@style/ButtonRoundShort20"
-            android:id="@+id/artwork_next_btn"
+            android:id="@+id/artwork_maintain_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             android:minHeight="0dp"
             android:paddingVertical="10dp"
             android:paddingHorizontal="50dp"
-            android:text="다음"
+            android:text="아니요 이대로가 좋아요"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/artwork_comment_tv" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/artwork_create_btn"
+            style="@style/ButtonRoundShort20"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:minHeight="0dp"
+            android:paddingHorizontal="50dp"
+            android:paddingVertical="10dp"
+            android:text="네 등록할께요"
+            app:layout_constraintEnd_toEndOf="@+id/artwork_maintain_btn"
+            app:layout_constraintStart_toStartOf="@+id/artwork_maintain_btn"
+            app:layout_constraintTop_toBottomOf="@+id/artwork_maintain_btn" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
