--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -49,11 +49,7 @@
         android:id="@+id/portfolioFragment"
         android:name="com.hexa.arti.ui.profile.PortfolioFragment"
         android:label="fragment_portfolio"
-        tools:layout="@layout/fragment_portfolio" >
-        <action
-            android:id="@+id/action_portfolioFragment_to_myPageFragment"
-            app:destination="@id/myPageFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_portfolio" />
     <activity
         android:id="@+id/mainActivity"
         android:name="com.hexa.arti.ui.MainActivity"
@@ -111,12 +107,6 @@
         android:id="@+id/myPageFragment"
         android:name="com.hexa.arti.ui.profile.MyPageFragment"
         android:label="MyPageFragment" >
-        <action
-            android:id="@+id/action_myPageFragment_to_portfolioFragment"
-            app:destination="@id/portfolioFragment" />
-        <action
-            android:id="@+id/action_myPageFragment_to_profileDetailFragment"
-            app:destination="@id/profileDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileDetailFragment"
@@ -145,6 +135,9 @@
         <action
             android:id="@+id/action_isSelectCreateImageFragment_to_imageUploadFragment"
             app:destination="@id/imageUploadFragment" />
+        <action
+            android:id="@+id/action_isSelectCreateImageFragment_to_artworkResultFragment"
+            app:destination="@id/artworkResultFragment" />
     </fragment>
     <fragment
         android:id="@+id/imageUploadFragment"
@@ -157,5 +150,25 @@
     <fragment
         android:id="@+id/artworkResultFragment"
         android:name="com.hexa.arti.ui.artwork.ArtworkResultFragment"
-        android:label="ArtworkResultFragment" />
+        android:label="ArtworkResultFragment" >
+        <action
+            android:id="@+id/action_artworkResultFragment_to_myGalleryFragment"
+            app:destination="@id/myGalleryFragment"
+            app:popUpTo="@id/myGalleryFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.hexa.arti.ui.setting.SettingFragment"
+        android:label="fragment_setting"
+        tools:layout="@layout/fragment_setting" >
+        <action
+            android:id="@+id/action_settingFragment_to_profileDetailFragment"
+            app:destination="@id/profileDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/myGalleryHomeFragment"
+        android:name="com.hexa.arti.ui.artmuseum.MyGalleryHomeFragment"
+        android:label="fragment_my_gallery_home"
+        tools:layout="@layout/fragment_my_gallery_home" />
 </navigation>
