--- a/Android/ArtI/app/src/main/res/layout/fragment_select_artwork.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_select_artwork.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="전시하고 싶은 미술품을 골라주세요"
+            android:text="그림을 검색하고 골라주세요"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/progressBar"
@@ -68,6 +68,7 @@
             android:id="@+id/artwork_search_tl"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:hint="미술품 검색"
             android:layout_marginHorizontal="20dp"
             app:boxCornerRadiusBottomEnd="16dp"
@@ -85,7 +86,6 @@
                 android:id="@+id/artwork_search_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:inputType="text"
                 android:maxLines="1"
                 android:minHeight="0dp"
