--- a/Android/ArtI/app/src/main/res/layout/fragment_artwork_upload.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_artwork_upload.xml
@@ -41,7 +41,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.08" />
-
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -61,18 +66,16 @@
             android:text="전시하고 싶은 미술품을 고를거에요"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <androidx.appcompat.widget.AppCompatButton
             style="@style/ButtonRoundShort20"
             android:id="@+id/artwork_next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             android:minHeight="0dp"
             android:paddingVertical="10dp"
             android:paddingHorizontal="50dp"
