--- a/Android/ArtI/app/src/main/res/layout/fragment_image_upload.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_image_upload.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_color"
         tools:context=".ui.artwork.ImageUploadFragment">
 
         <ImageView
@@ -53,55 +54,86 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15"/>
 
         <TextView
             android:id="@+id/artwork_create_image_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="합성할 사진을 골라주세요"
+            android:textStyle="bold"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+            app:layout_constraintTop_toTopOf="@+id/guideline" />
 
-        <ImageView
-            android:id="@+id/origin_img"
-            android:layout_width="220dp"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/gallery_sample1"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/source_img_cv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/artwork_create_image_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/artwork_create_image_tv">
 
+            <ImageView
+                android:id="@+id/source_img"
+                android:layout_width="220dp"
+                android:layout_height="180dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/base_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/artwork_create_image_tv" />
+        </androidx.cardview.widget.CardView>
         <ImageView
             android:id="@+id/plus_img"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginVertical="10dp"
             android:src="@drawable/ic_add_24"
+            app:layout_constraintBottom_toTopOf="@+id/origin_img_cv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/origin_img"
+            app:layout_constraintTop_toBottomOf="@+id/source_img_cv"
             app:tint="@color/black" />
 
-        <ImageView
-            android:id="@+id/source_img"
-            android:layout_width="220dp"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/gallery_sample1"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/origin_img_cv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/plus_img" />
+            app:layout_constraintTop_toBottomOf="@+id/plus_img">
 
+            <ImageView
+                android:id="@+id/origin_img"
+                android:layout_width="220dp"
+                android:layout_height="180dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/gallery_sample1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/plus_img" />
+        </androidx.cardview.widget.CardView>
         <androidx.appcompat.widget.AppCompatButton
             style="@style/ButtonRoundShort20"
             android:id="@+id/artwork_create_image_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="확인"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/source_img" />
+            app:layout_constraintTop_toBottomOf="@+id/origin_img_cv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
